# OpenPrinting_CUPS_Backend

./: .cproject  .gdb_history  .gitignore  .gitmodules  .project  LICENSE.md  Makefile  Makefile.am  README.md  backend_helper.c  backend_helper.h  backend_interface.c  backend_interface.h  common_helper.c  common_helper.h  configure.ac  frontend_helper.c  frontend_helper.h  frontend_interface.c  frontend_interface.h  gitadd.sh  gmon.out  install.sh  org.openprinting.Backend.CUPS.service  org.openprinting.Backend.xml  org.openprinting.Frontend.xml  print_backend_cups  print_backend_cups.c  print_backend_cups_new.c  print_data_structures.c  print_data_structures.h  print_frontend.c
.metadata/.plugins/org.eclipse.cdt.core/: PrintDialog_Backend.1502186232648.pdom
.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.cdt.make.core/: PrintDialog_Backend.sc
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.epp.usagedata.recording/: upload0.csv  upload1.csv  usagedata.csv
CUPS_src/: backend_helper.c  backend_helper.h  print_backend_cups.c
SampleFrontend/: print_frontend.c
aux/: org.openprinting.Backend.CUPS.service
data/: Makefile.am  org.openprinting.Backend.CUPS.service.in
interface/: org.openprinting.Backend.xml
release/headers/: CPD.h  backend_interface.h  common_helper.h  frontend_helper.h  frontend_interface.h
src/: CPDBackend.h  CPDBackend.pc  CPDFrontend.h  CPDFrontend.pc  Makefile.am  backend_helper.c  backend_helper.h  backend_interface.c  backend_interface.h  common_helper.c  common_helper.h  frontend_helper.c  frontend_helper.h  frontend_helper_old.c  frontend_helper_old.h  print_backend_cups.c  print_frontend.c
test/: Makefile  test_gtk_print  test_gtk_print.c
testDBUS/: Makefile  add.c  com.Nilanjana.xml  mydbus.c  mydbus.h  server.c  sub.c
testDBUS/autodiscover/: README  backend_interface.c  backend_interface.h  com.Backend.xml  com.Frontend.xml  commondefs.h  front_end.c  frontend_interface.c  frontend_interface.h  server_cups.c  server_dummy.c
testGTKAPI/: test_gtk_print  test_gtk_print.c
(+16 files in other folders)
